--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,24 @@ a {
   border-width: 2px;
   border-radius: 0;
 }
+
+.hero {
+  background-image: url(/img/baloon.jpg);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  z-index: 2;
+}
+
+.hero::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(66, 66, 68, 0.7);
+  z-index: -1;
+}
